made revisions to buttons, added fixed nav and adjusted some styles. Still neeed to fix contrast in some of the themes.

--- a/styles/sass/_themes.scss
+++ b/styles/sass/_themes.scss
@@ -2,6 +2,7 @@
 
 :root{
     --bgcolor:#1b1b1a;
+    --nav-bg:rgba(27, 27, 26, 0.9);
     --text-color: #EDEDED;
     --nav-color:#EDEDED;
     --secondary-color:#EDEDED;
