--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -65,20 +65,47 @@ a{
 
 .button{
     background-color:var(--button-color);
+    border:3px solid var(--button-color);
+    color:var(--secondary-color);
     padding:10px 15px;
+    width:45%;
+}
+
+.headerButton{
+    background-color:var(--text-color);
+    border:3px solid var(--accent-color);
+    color:var(--accent-color);
+    padding:10px 15px;
+}
+
+.githubButton{
+    border:3px solid var(--button-color);
+    color:var(--text-color);
+    padding:10px 15px;
+    width:45%;
+}
+
+.button, .headerButton, .githubButton{
     margin:2%;
     font-family:'Raleway', sans-serif;
-    border:3px solid var(--button-color);
     display:inline-block;
-    width:45%;
     line-height:1.8rem;
-    color:var(--secondary-color);
+    text-align:center;
 }
 
 .button:hover,
-.button:focus{
+.button:focus,
+.githubButton:hover,
+.githubButton:focus{
     background-color:var(--secondary-color);
     color:var(--button-color);
+}
+
+.headerButton:hover,
+.headerButton:focus{
+    background-color:var(--accent-color);
+    border-color:var(--text-color);
+    color:var(--text-color);
 }
 
 
@@ -120,6 +147,7 @@ p{
     }
 
 }
+
 .grid{
     margin:0; 
     height:100vh;
@@ -157,15 +185,18 @@ p{
 
 }
 
+
 header{
-    position:absolute;
+    // position:absolute;
     z-index:100;
-    width:90%;
-    margin:2% 5%;
+    width:100%;
+    margin:0 auto;
     display:flex;
     justify-content:space-between;
     align-items:center;
-
+    height:8vh;
+    padding:3%;
+    position:fixed;
 }
 
 input[type="checkbox"], 
@@ -184,8 +215,6 @@ nav{
     width:90%;
     display:flex;
     justify-content:right;
-
-    
 }
 
 nav ul{
@@ -196,6 +225,10 @@ nav ul{
     
 }
 
+nav li{
+    border-bottom: 2px solid transparent;
+}
+
 nav a{
     color:var(--nav-color);
     font-family:'Raleway', sans-serif;
@@ -203,6 +236,7 @@ nav a{
     text-align:right;
     text-decoration:none;
     cursor: pointer;
+    
 }
 
 nav li:hover,
@@ -218,7 +252,7 @@ nav a:focus{
 }
 
 .fa-palette:hover{
-    color:#000000;
+    color:var(--accent-color);
     transition: all 0.3s linear;
     cursor: pointer;
 }
@@ -360,25 +394,24 @@ nav a:focus{
 }
 
 #myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: 2px solid var(--secondary-color); /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: var(--accent-color); /* Set a background color */
-    color: var(--secondary-color); /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    font-size: 18px; /* Increase font size */
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: 2px solid var(--secondary-color); 
+    outline: none; 
+    background-color: var(--accent-color); 
+    color: var(--secondary-color); 
+    cursor: pointer; 
+    padding: 15px; 
+    font-size: 18px; 
     font-family: 'Raleway', sans-serif;
-  }
+}
   
   #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-  }
-
+    background-color: #555; 
+}
 
 
 
